<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_divisaBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/divisa_base"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_divisaBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" />

        <ImageView
            android:id="@+id/img_intercambio"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10sp"
            android:src="@drawable/intercambio" />

        <TextView
            android:id="@+id/tv_divisaCotizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/divisa_cotizada"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_divisaCotizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp" />

        <EditText
            android:id="@+id/cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/bt_calculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_valorBase"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/euro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_resValorBase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/_5"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_valorCotizado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dolar"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_resValorCotizado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="5"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>